services working. Responses are subpar

--- a/.env
+++ b/.env
@@ -12,3 +12,7 @@ QDRANT_PORT=6333
 # Ollama Configuration
 OLLAMA_HOST=http://localhost:11434
 OLLAMA_MODEL=qwen2.5
+
+
+BLOG_BASE_URL=https://www.bitovi.com/
+BLOG_MAX_PAGES=41
